@@ -2,7 +2,10 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
-  GIRAPH-44. Add documentation about counter limits in Hadoop 0.203+.
+  GIRAPH-48: numFlushThreads is 0 when doing a single worker 
+  unittest. Changing the minimum to 1. (aching)
+
+  GIRAPH-44: Add documentation about counter limits in Hadoop 0.203+.
   (mtiwari via jghoman)
 
   GIRAPH-12: Investigate communication improvements. (hyunsik)
